core spacing fix

--- a/static_files/scss/jj-core-storefront.scss
+++ b/static_files/scss/jj-core-storefront.scss
@@ -110,7 +110,7 @@
     text-align: center;
     padding-bottom: 20px;
     padding-top: 0;
-    margin-top: 10px !important;
+    margin-top: 69px !important;
     float: left;
 
     .col_1 {
